<resources>
    <string name="app_name">ſ͔ɭᴜ ᶅſɔ ꞁȷ̀ɔ ꞁȷ̀ɹ ſɭˬꞇᴜ</string>
    <string name="iixakanoi">ꞁȷ̀ɹ ʃᴜ ſɭᴜ }ʃɜꞇ</string>

    <string name="laarinak">j͑ʃᴜꞇ\nɭʃᴜ\nſɟw\nſɭɔʞ</string>
    <string name="tsalii">j͐ʃɹ\nſᶘᴜ</string>
    <string name="shaqatti">ɭ(ꞇ\nſ͕ɭᴜ\nı],ᴜ</string>
    <string name="kefskakefai">ꞁȷ̀ᴜꞇ\nſɭɔʞ\nj͑ʃƽᴜ\nſɭɔʞ</string>

    <string name="laarinak2"> ſɭɔʞ j͑ʃᴜꞇ ɭʃᴜ ſɟw</string>
    <string name="tsalii2">ſᶘᴜ j͐ʃɹ</string>
    <string name="shaqatti2">ı],ᴜ ɭ(ꞇ ſ͕ɭᴜ</string>
    <string name="kefskakefai2">ſɭɔʞ ꞁȷ̀ᴜꞇ ſɭɔʞ j͑ʃƽᴜ</string>
</resources>